JumpScript/tests/baselines/reference/ClassDeclaration22.errors.txt
tests/cases/compiler/ClassDeclaration22.jump(3,5): error TS2389: Function implementation name must be '"foo"'.


==== tests/cases/compiler/ClassDeclaration22.jump (1 errors) ====
    class C {
        "foo"();
        "bar"() { }
        ~~~~~
!!! error TS2389: Function implementation name must be '"foo"'.
    }